# allplan-scia-agentic-workflow

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  test_trace.py  viktor.config.toml
app/: __init__.py  controller.py  tools.py
app/agent/: __init__.py  runner.py  system_prompt.py
app/agent/tools/: __init__.py  registry.py
app/viktor_api_tool/: __init__.py  agent_tools.py  client.py  code_editor.py  discovery.py  local_shell.py  models.py
app/viktor_api_tool/local_shell_skill/: SKILL.md
app/viktor_tools/: api_types.py  table_tool.py
app/workflow_graph/: example_workflow.py  workflow.js
test/: agent_runner_create_workflow_smoke.py  agent_runner_real_two_viktor_urls.py  agent_runner_real_viktor_urls.py  agent_runner_three_urls_manual_storage.py  agents_sdk_viktor_understanding_smoke.py  analyze_viktor_workflow_urls.py  create_viktor_sibling_entities.py  local_shell_create_app_b_from_app_a.py  local_shell_test_second_third_apps.py  test_workflow_graph_plan.py
test/artifacts/agent_runner_create_workflow/: latest.json
test/artifacts/agent_runner_real_two_viktor_urls/: latest.json
test/artifacts/agent_runner_three_urls_manual_storage/: latest.json
test/artifacts/agents_sdk_viktor_understanding/: latest.json
test/artifacts/debug_viktor_2651_12137/: latest.json
test/artifacts/local_shell_create_app_b_from_app_a/: latest.json
test/artifacts/local_shell_second_third_test/: latest.json
test/artifacts/scia_app_output_probe/: latest.json
test/artifacts/viktor_five_app_workflow/: latest.json  workflow_analysis.md
(+4 files in other folders)
